--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css" />
     <title>Logan Bonnesen's Portfolio</title>
   </head>
@@ -39,8 +40,12 @@
           learning more and eventually land a job as a developer.
         </p>
       </section>
+      
       <section>
         <h2 id="portfolio">Portfolio</h2>
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="col-6 align-self-center">
         <div class="apps">
           <a
             href="https://logan-bonnesen.github.io/01-homework/"
@@ -55,47 +60,68 @@
                 title="Horiseon Social Solution Services, Inc"
               />
             </div>
-          </a>
-
-          <a href="https://via.placeholder.com/200" target="_blank">
-            <div class="photos">
-              <img
-                src="https://via.placeholder.com/200"
-                alt="placeholder photo"
-                title="placeholder photo 1"
-              />
             </div>
           </a>
-
-          <a href="https://via.placeholder.com/200" target="_blank">
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-6 align-self-center">
+          <a href="https://logan-bonnesen.github.io/Project-1/" target="_blank">
             <div class="photos">
               <img
-                src="https://via.placeholder.com/200"
-                alt="second placeholder photo"
-                title="placeholder photo 2"
+                src="./assets/project1-portfolio-update.png"
+                alt="screenshot of project 1 homepage"
+                title="screenshot of project 1 homepage"
+                class="img-thumbnail"
               />
             </div>
-          </a>
-          <a href="https://via.placeholder.com/200" target="_blank">
-            <div class="photos">
-              <img
-                src="https://via.placeholder.com/200"
-                alt="third placeholder photo"
-                title="placeholder photo 3"
-              />
             </div>
           </a>
-          <a href="https://via.placeholder.com/200" target="_blank">
+          </div>
+          <div class="row justify-content-center">
+            <div class="col-6 align-self-center">
+          <a href="https://logan-bonnesen.github.io/04-Code-Quiz/" target="_blank">
             <div class="photos">
               <img
-                src="https://via.placeholder.com/200"
-                alt="fourth placeholder photo"
-                title="placeholder photo 4"
+                src="./assets/coding-quiz-screenshot.png"
+                alt="screenshot of coding quiz homepage"
+                title="screenshot of coding quiz homepage"
+                class="img-thumbnail"
+              />
+            </div>
+            </div>
+          </a>
+        </div>
+          <div class="row justify-content-center">
+            <div class="col-6 align-self-center">
+          <a href="https://logan-bonnesen.github.io/05-work-day-scheduler/" target="_blank">
+            <div class="photos">
+              <img
+                src="./assets/work-day-scheduler-screenshot.png"
+                alt="screenshot of work day scheduler homepage"
+                title="screenshot of work day scheduler homepage"
+                class="img-thumbnail"
+              />
+            </div>
+            </div>
+          </a>
+        </div>
+          <div class="row justify-content-center">
+            <div class="col-6 align-self-center">
+          <a href="https://logan-bonnesen.github.io/03-Password-Generator/" target="_blank">
+            <div class="photos">
+              <img
+                src="./assets/Password-Generator-logan-bonnesen.github.io.png"
+                alt="screenshot of password generator homepage"
+                title="screenshot of password generator homepage"
+                class="img-thumbnail"
               />
             </div>
           </a>
         </div>
+        </div>
+        </div>
       </section>
+    </div>
       <section>
         <h3 id="contact" class="pagescroll">Contact</h3>
         <p class="contact">
@@ -107,5 +133,6 @@
     <footer>
       <a href="#top" class="backtotop">Back To Top</a>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
